--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -15,10 +15,16 @@ p {
 }
 
 h2 {
-    color: $secondary-darken-1;
+    color: $secondary-darken-1 !important;
     margin-bottom: 15px;
 }
+h3 {
+    color: $primary;
+}
 
+h4 {
+    color: $primary-darken-1;
+}
 ul,
 ol {
     padding-left: 40px;
@@ -29,7 +35,7 @@ img {
     max-width: 100%;
 }
 
-figcaption{
+figcaption {
     color: $primary-darken-1;
     font-size: 20px;
 }
