--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -5,8 +5,15 @@ $secondary-darken-1: #3A7CA5;
 
 body {
     max-width: 1920px;
-    min-width: 360px
+    min-width: 360px;
+    scroll-behavior: smooth;
 }
+html{
+    @media (max-width:360px) {
+        overflow-x: scroll;   
+    }
+}
+
 
 p {
     color: $primary-darken-1;
@@ -18,6 +25,7 @@ h2 {
     color: $secondary-darken-1 !important;
     margin-bottom: 15px;
 }
+
 h3 {
     color: $primary;
 }
@@ -25,6 +33,7 @@ h3 {
 h4 {
     color: $primary-darken-1;
 }
+
 ul,
 ol {
     padding-left: 40px;
